# chain_talk

./: .env.example  .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  PROJECT_HIGHLIGHTS.md  ReadMe.md  docker-compose.yml  nginx.conf  start.sh
.specstory/history/: 2025-08-16_09-07Z-understanding-project-and-troubleshooting-errors.md
frontend/: index.html
src/: auth.rs  blockchain.rs  config.rs  error.rs  handlers.rs  main.rs  models.rs  state.rs  websocket.rs
